deploy/sandbox/sandbox-api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-api
  namespace: sandbox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sandbox
      component: sandbox-api
  template:
    metadata:
      labels:
        app: sandbox
        component: sandbox-api
    spec:
      serviceAccountName: sandbox-api
      containers:
      - name: api
        image: docker.io/lulf/strimzi-sandbox-api:latest
        ports:
          - name: http
            protocol: TCP
            containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health/live
            port: http
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /health/ready
            port: http
            scheme: HTTP
        imagePullPolicy: Always
