deploy/sandbox/sandbox-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-app
  namespace: sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox
      component: sandbox-app
  template:
    metadata:
      labels:
        app: sandbox
        component: sandbox-app
    spec:
      serviceAccountName: sandbox-app
      containers:
      - name: app
        ports:
          - name: http
            containerPort: 8080
        image: docker.io/lulf/strimzi-sandbox-app:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: 128Mi
