deploy/sandbox/sandbox-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-api
  namespace: sandbox
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: sandbox
    component: sandbox-api
