deploy/sandbox/sandbox-operator.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-operator
  namespace: sandbox
  labels:
    app: sandbox
    component: sandbox-operator
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: sandbox
    component: sandbox-operator
