deploy/sandbox/sandbox-api.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sandbox-api
  namespace: sandbox
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-dns"
spec:
  rules:
  - host: api.strimzi-sandbox.enmasse.io 
    http:
      paths:
      - backend:
          serviceName: sandbox-api
          servicePort: http
        path: /
  tls:
  - hosts:
      - api.strimzi-sandbox.enmasse.io
    secretName: api-cert
