deploy/sandbox/sandbox-app.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sandbox-app
  namespace: sandbox
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: kafka.lulf.no 
    http:
      paths:
      - path: /
        backend:
          serviceName: sandbox-app
          servicePort: http
  tls:
  - hosts:
      - kafka.lulf.no
    secretName: app-cert
